--- a/spring-example-job/src/main/webapp/job.html
+++ b/spring-example-job/src/main/webapp/job.html
@@ -69,9 +69,9 @@
         loadData();
 
         function loadData() {
-            $.post2('schedule/list', {}, function (res) {
+            $.post2('schedule/list', {}, function (data) {
                 table.reload('list', {
-                    data: dataConverter(res.data)
+                    data: dataConverter(data)
                 });
             });
         }
