--- a/spring-example-job/src/main/webapp/job.html
+++ b/spring-example-job/src/main/webapp/job.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="layui/css/layui.css">
     <script type="text/javascript" src="layui/layui.js"></script>
-    <script type="text/javascript" src="utils.js"></script>
+    <script type="text/javascript" src="layui-ext.js"></script>
 
 </head>
 
