--- a/spring-example-job/src/main/webapp/job.html
+++ b/spring-example-job/src/main/webapp/job.html
@@ -63,7 +63,9 @@
 
 
 <script type="text/javascript">
-    layui.use(['table'], function () {
+    layui.use(['laytpl', 'form', 'table'], function () {
+        var laytpl = layui.laytpl;
+        var form = layui.form;
         var table = layui.table;
         var http = layui.http;
 
