--- a/spring-example-job/src/main/webapp/contact.html
+++ b/spring-example-job/src/main/webapp/contact.html
@@ -140,7 +140,7 @@
                     layer.open({
                         type: 1,
                         area: '400px',
-                        title: '详情',
+                        title: '编辑',
                         content: html
                     });
                     form.render('radio');
